B-58646 Fixed breaking test