@@ -262,6 +262,13 @@ test {
 
 jettyRun {
     httpPort = 8083
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    //jvmArgs '-XX:MaxPermSize=1024m'
 }
 
 
